# DownloadTool

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
mainwindow/: mainwindow.cpp  mainwindow.h
